# gpuio-by-qwen

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  setup.py  tasklist.md
.github/workflows/: build.yml  ci.yml  codeql.yml  release.yml
cmake/: gpuioConfig.cmake.in
docs/: README.md  System-Architecture.md  System-Design.md  System-Requirements.md
include/gpuio/: gpuio.h  gpuio_ai.h
modules/ai/: CMakeLists.txt
modules/ai/include/: ai_internal.h  compression_internal.h  engram_internal.h
modules/ai/src/: dsa_kv.c  engram.c  graph_rag.c
modules/common/: CMakeLists.txt
modules/common/include/: lru_cache.h  vector_ops.h
modules/common/src/: vector_ops.c
modules/core/include/: core_internal.h
modules/core/src/: stream.c  vendor_nvidia.c
modules/memio/include/: memio_internal.h
modules/memio/src/: mapper.c  memio.c  numa.c
modules/remoteio/include/: remoteio_internal.h
src/: gpuio.c
src/ai/: CMakeLists.txt  ai_context.c  ai_internal.h  compression.c  dsa_kv.c  dsa_kv_internal.h  engram.c  engram_internal.h  graph_rag.c  graph_rag_internal.h
src/common/: CMakeLists.txt  common_utils.c  common_utils.h  lru_cache.c
src/core/: context.c  core_internal.h  log.c  memory.c  stream.c  vendor_amd.c  vendor_nvidia.c
src/localio/: file.c  gds.c  localio.c  localio_internal.h
src/memio/: cxl.c  memio_internal.h
src/python/: gpuio_python.c
src/python/gpuio/: __init__.py
src/remoteio/: network.c  rdma.c  remoteio.c  remoteio_internal.h
tests/: CMakeLists.txt  Makefile  README.md
tests/benchmark/: bench_throughput.c
tests/integration/: test_inference.c  test_memio.c  test_training.c
tests/python/: test_gpuio.py
tests/unit/: test_ai.c  test_core.c  test_memio_zero_copy.c  test_memory.c  test_request.c  test_stream.c
